--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #333;
   color: #fff;
-  font-family: Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
 }
