--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #333;
+  background-color: #222;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
@@ -7,16 +7,28 @@ body {
 }
 
 .app {
-  max-width: 60%;
+  max-width: 90%;
   margin: 0 auto;
   padding: 20px;
+}
+
+@media (min-width: 768px) {
+  .app {
+    max-width: 80%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .app {
+    max-width: 60%;
+  }
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #444;
+  background-color: #333;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
@@ -24,8 +36,20 @@ body {
 }
 
 .search-container {
-  width: 30%;
+  width: 100%;
   margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .search-container {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .search-container {
+    width: 30%;
+  }
 }
 
 input {
@@ -34,7 +58,7 @@ input {
   font-size: 16px;
   border: none;
   border-radius: 4px;
-  background-color: #555;
+  background-color: #444;
   color: #fff;
 }
 
@@ -61,7 +85,7 @@ td {
 }
 
 th {
-  background-color: #555;
+  background-color: #444;
   color: #fff;
   width: 33.33%;
 }
@@ -78,7 +102,7 @@ img {
 }
 
 .spinner {
-  border: 4px solid #555;
+  border: 4px solid #444;
   border-top: 4px solid #3498db;
   border-radius: 50%;
   width: 30px;
@@ -99,7 +123,7 @@ img {
   margin: 0 4px;
   border: none;
   border-radius: 4px;
-  background-color: #555;
+  background-color: #444;
   color: #fff;
   cursor: pointer;
 }
@@ -140,6 +164,6 @@ img {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #333;
+  background-color: #222;
   color: #fff;
 }
